# msparser

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml
parsers/: __init__.py  model.py  parser.py  xlsx.py
parsers/utils/: __init__.py  second_page_cm.py
