[tool.poetry]
name = "msparser"
version = "0.1.0"
description = ""
authors = ["rychanya <rychanya@gmail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "pymongo"
pymongo = {extras = ["srv"], version = "^3.12.0"}
certifi = "^2021.5.30"

[tool.poetry.dev-dependencies]
pydantic = "^1.8.2"
selenium = "^3.141.0"
typer = "^0.4.0"
XlsxWriter = "^3.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
